openshift-config/Frontend/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    io.kompose.service: frontend
  strategy:
    resources: {}
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 60
      intervalSeconds: 60
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: ${DOCKERREG}/${PROJECTNAME}/frontend:${FRONTENDVERSION}
        name: frontend
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: ${FECHKURL}
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 512Mi
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
status: {}
