openshift-config/Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
  - name: "${FEPORT}"
    port: ${FEPORT}
    targetPort: ${FEPORT}
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
