openshift-config/Frontend/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec:
  host: ${PROJECTNAME}.${DOMAINNAME}
  port:
    targetPort: '${FEPORT}'
  to:
    kind: Service
    name: frontend
